Continuing to make fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,22 +8,7 @@
 
     <div class="row mt-4">
         <div class="col-md-6">
-            <h3>My Files</h3>
-            <ul class="list-group">
-                {% for file in user_files %}
-                <li class="list-group-item">
-                    <strong>{{ file.filename }}</strong>
-                    <a href="{{ url_for('view_revisions', filename=file.filename) }}"
-                        class="btn btn-info btn-sm ms-2">View Revisions</a>
-                    <a href="{{ url_for('download_all_revisions', filename=file.filename) }}"
-                        class="btn btn-success btn-sm ms-2">Download All Revisions</a>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-
-        <div class="col-md-6">
-            <h3>Upload a File</h3>
+            <h3>Start a Revision</h3>
             <form method="post" action="{{ url_for('queue') }}" enctype="multipart/form-data">
                 <div class="row mb-3">
                     <div class="col">
