Comparison,Edit and Continue now working

--- a/templates/compare_revisions.html
+++ b/templates/compare_revisions.html
@@ -3,9 +3,9 @@
 {% block title %}Compare Revisions - Code Reviser UI{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container mt-4 w-100 h-100">
     <h2>Compare Revisions</h2>
     <p>Comparison Result:</p>
-    <pre>{{ comparison_result }}</pre>
+    <pre>{{ comparison_result|safe }}</pre>
 </div>
 {% endblock %}
